[GStreamer][WebRTC] Fix a couple vp9 layout tests https://bugs.webkit.org/show_bug.cgi?id=305692

Reviewed by Xabier Rodriguez-Calvar.

These tests were failing for two reasons:
- the MediaDecodingInfo `smooth` field wasn't filled.
- The internals.gatherDecoderImplementationName() function wasn't implemented for the GStreamer
ports. It now returns a string similar to the libwebrtc backend. The decoderImplementation stats
field is also no longer filled because it is sensible to fingerprinting.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::preprocessStats):
(WebCore::GStreamerMediaEndpoint::gatherDecoderImplementationName):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::GStreamerStatsCollector::GStreamerStatsCollector):
(WebCore::RTCStatsReport::InboundRtpStreamStats::InboundRtpStreamStats):
(WebCore::GStreamerStatsCollector::gatherStats):
(WebCore::GStreamerStatsCollector::getStats):
(WebCore::GStreamerStatsCollector::gatherDecoderImplementationName):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.h:
(WebCore::GStreamerStatsCollector::setElement):
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
(WebCore::configureMediaStreamVideoDecoder):
* Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.h:
* Source/WebCore/platform/graphics/gstreamer/MediaEngineConfigurationFactoryGStreamer.cpp:
(WebCore::createMediaPlayerDecodingConfigurationGStreamer):
(WebCore::createMediaPlayerEncodingConfigurationGStreamer):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::configureVideoDecoder):
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.cpp:
(WebCore::GStreamerIncomingTrackProcessor::incomingTrackProcessor):
(WebCore::GStreamerIncomingTrackProcessor::stats):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.h:

Canonical link: https://commits.webkit.org/305811@main